samples/_failures_safe/1761406456_9d4011_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48af0577.c: In function ‘main’:
./samples/SAFE/__tmp_48af0577.c:162:9: error: expected expression at end of input
  162 |         dfs(&
      |         ^~~
./samples/SAFE/__tmp_48af0577.c:162:9: error: too few arguments to function ‘dfs’
./samples/SAFE/__tmp_48af0577.c:95:6: note: declared here
   95 | void dfs(struct Graph *g, int start) {
      |      ^~~
./samples/SAFE/__tmp_48af0577.c:162:9: error: expected declaration or statement at end of input
  162 |         dfs(&
      |         ^~~
./samples/SAFE/__tmp_48af0577.c:162:9: error: expected declaration or statement at end of input
